example/lib/src/arbs/errors/app_uz.arb
{
  "@@locale": "uz",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Xatolik yuz berdi",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Kutilmagan xato yuz berdi",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Xato hisobot muvaffaqiyatli yuborildi.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}